# DDalkkak

./: .env.example  .gitignore  README.md  main.py  memory.md  pyproject.toml  test.py
.omc/: project-memory.json
.omc/sessions/: a4cf57eb-2f41-4c44-880e-560717ba1384.json
.sisyphus/drafts/: ddalkkak-hackathon.md  test-scenarios.md
.sisyphus/plans/: ddalkkak-hackathon.md
decks/ddalkkak-mid/: slide-04.html  viewer.html
scripts/: demo.py  start_tunnel.sh
src/: config.py  main.py  memory.py
src/agent/: appium_agent.py  droid_agent.py  task_builder.py
src/cli/: app.py
src/intent/: parser.py  prompts.py  schemas.py
src/router/: router.py
src/services/: base.py  delivery.py  gift.py  mobility.py  reservation.py  shopping.py  travel.py
tests/: test_router.py  test_services.py
